--- a/client/src/styles/product.scss
+++ b/client/src/styles/product.scss
@@ -35,9 +35,11 @@
             border: 0;
             border-radius: 14px;
         }
-        .duration{
-            display: flex;
-            align-items: center;
-        }
+    }
+}
+
+@media screen and (min-width: 767px) {
+    .productCardContainer{
+        width: 400px;
     }
 }
