--- a/client/src/styles/toursGrid.scss
+++ b/client/src/styles/toursGrid.scss
@@ -23,6 +23,7 @@
             margin-bottom: 1rem;
             overflow: hidden;
             max-width: 650px;
+            cursor: pointer;
             
             img{
                 border-radius: 14px;
