Privacy Policy page completed

--- a/client/src/styles/policypage.scss
+++ b/client/src/styles/policypage.scss
@@ -11,6 +11,9 @@
         margin: 1rem auto;
         max-width: 300px;
     }
+    h1{
+        text-align: center;
+    }
     
     .heading{
         text-align: center;
