--- a/client/src/styles/allBookings.scss
+++ b/client/src/styles/allBookings.scss
@@ -1,11 +1,28 @@
 @use './variables.scss' as *;
 
+.allBookingsMainContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+    h1{
+        font-size: 1.3rem;
+    }
+    .serviceSelect{ 
+        font-size: 1.1rem;
+        width: 100%;
+        padding: 1rem;
+
+    }
+}
 .allBookingsContainer{
     display: flex;
     flex-direction: column;
     gap:10px;
     margin-top: 1rem;
     padding: 10px;
+
+   
 
     .cardContainer{
         display: flex;
@@ -54,7 +71,32 @@
 }
 
 
-@media screen and (min-width: 767px) {
+
+
+@media screen and (min-width: 1024px) {
+    .allBookingsMainContainer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem;
+        h1{
+            font-size: 1.3rem;
+        }
+        .serviceSelect{ 
+            font-size: 1.1rem;
+            width: 500px;
+            padding: 1rem;
+    
+        }
+    }
+    .allBookingsContainer {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+}
+
+@media screen and (min-width: 1200px) {
     .allBookingsContainer {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
