--- a/client/src/styles/paxModal.scss
+++ b/client/src/styles/paxModal.scss
@@ -1,38 +1,46 @@
 @use './variables.scss' as *;
 
-.paxSelectorContainer{
+.paxSelectorMainContainer{
     z-index: 100;
-    position: absolute;
-    height: 120vh;
     width: 100%;
-    text-align: center;
+    position: absolute;
     top: 0px;
-    background-color: $primaryModalColor;
-    padding: 1rem;
-
-
-    .cancelBookingContainer{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        .crossIcon{
-            background-color: transparent;
-            display: block;
-            margin-left: auto;
-            font-size: 1rem;
-            color: $primary;
-            border: 0;
-            transition: all 0.3s linear;
-            &:active,
-            &:hover{
-                transform: scale(1.1);
-                cursor: pointer;
-            }
-        }
+    background-color: rgba(0,0,0,0.3);
+    min-height: 120vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .paxSelectorContainer{
+        text-align: center;
+        background-color: $primaryModalColor;
+        padding: 1rem;
+        width: 350px;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+        border-radius: 14px;
         
-        .backIcon{
-            background-color: transparent;
-            display: block;
+        .cancelBookingContainer{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            .crossIcon{
+                background-color: transparent;
+                display: block;
+                margin-left: auto;
+                font-size: 1rem;
+                color: $primary;
+                border: 0;
+                transition: all 0.3s linear;
+                &:active,
+                &:hover{
+                    transform: scale(1.1);
+                    cursor: pointer;
+                }
+            }
+            
+            .backIcon{
+                background-color: transparent;
+                display: block;
             margin-right: auto;
             font-size: 1rem;
             color: $primary;
@@ -55,14 +63,14 @@
         margin-bottom: 1rem;
         font: bold;
     }
-
+    
     .paxSelector{
         display: flex;
         flex-direction: column;
         gap:20px;
         margin-top: 2rem;
         width: 100%;
-
+        
         .pax{
             display: grid;
             grid-template-columns: 1fr 100px 1fr;
@@ -75,11 +83,11 @@
             border: 1px solid $cardBorderColor;
             border-radius: 8px;
             box-shadow: 1px 1px 10px 1px $cardBorderColor;
-
+            
             p{
                 text-align: start;                
                 gap: 5px;
-
+                
                 span{
                     display: block;
                     font-weight: 600;
@@ -94,8 +102,8 @@
                 p{
                     font-size: 1.4rem;
                 }
-              
-
+                
+                
                 svg{
                     color: $primary;
                     font-size: 2rem;
@@ -111,7 +119,7 @@
             }
         }
     }
-
+    
     .totalPayable,
     .dateContainer{
         display: flex;
@@ -123,7 +131,7 @@
             font-weight: 600;
         }
         
-
+        
         button{
             font-size: 1.2rem;
             color: #fff;
@@ -132,7 +140,7 @@
             padding: 0.5rem 1rem;
             border: none;
             outline: none;
-
+            
             &:hover{
                 cursor: pointer;
             }
@@ -141,12 +149,12 @@
 
 }
 
-
+}
 
 @media screen and (min-width: 763px) {
-    .paxSelectorContainer {
-        top: 10px;
-        box-shadow: 0px 0px 15px 1px #adadad;
-        
+    .paxSelectorMainContainer{
+        .paxSelectorContainer {
+           width: 650px;
+        }        
     }
 }
