--- a/client/src/styles/allBookings.scss
+++ b/client/src/styles/allBookings.scss
@@ -35,6 +35,10 @@
             justify-content:  space-between;
         }
 
+        .payment-fail{
+            font-weight: 600;
+            color: #ff0000;
+        }
         .personCount{
             display: flex;
             align-items: center;
